v0.317 Fast bugfix: fir expdanding and collapsing of main menu items on small displaces

--- a/app/scss/header/_navigation.scss
+++ b/app/scss/header/_navigation.scss
@@ -38,7 +38,7 @@
     &__label{
         a {
             display: inline-block;
-            width: 100%;
+            width: min(100%, 2em);
         }
     }
     @include md {
